log
cc -Wall -o etc_monitor main.c utility.c car.c -lpthread
main.c: In function ‘appendCar’:
main.c:102:5: warning: ‘main’ is normally a non-static function [-Wmain]
 int main(void){
     ^~~~
main.c:110:1: error: expected declaration or statement at end of input
 }
 ^
main.c:16:7: warning: unused variable ‘pCarTab’ [-Wunused-variable]
 user *pCarTab=NULL;
       ^~~~~~~
main.c:15:17: warning: unused variable ‘mutex1’ [-Wunused-variable]
 pthread_mutex_t mutex1 = PTHREAD_MUTEX_INITIALIZER;
                 ^~~~~~
main.c:110:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
At top level:
main.c:102:5: warning: ‘main’ defined but not used [-Wunused-function]
 int main(void){
     ^~~~
car.c: In function ‘appendCar’:
car.c:108:7: error: static declaration of ‘getCarById’ follows non-static declaration
 user *getCarById(char *pId){
       ^~~~~~~~~~
car.c:80:7: note: previous declaration of ‘getCarById’ was here
 user *getCarById(char *pId);
       ^~~~~~~~~~
car.c: In function ‘getCarById’:
car.c:109:11: error: ‘pCarTab’ undeclared (first use in this function); did you mean ‘ppTab’?
  user *pT=pCarTab;
           ^~~~~~~
           ppTab
car.c:109:11: note: each undeclared identifier is reported only once for each function it appears in
car.c: In function ‘appendCar’:
car.c:119:6: error: static declaration of ‘appendCarTimestamp’ follows non-static declaration
 void appendCarTimestamp(char *pId, long sec, long usec){
      ^~~~~~~~~~~~~~~~~~
In file included from car.c:15:0:
car.h:22:6: note: previous declaration of ‘appendCarTimestamp’ was here
 void appendCarTimestamp(char *pId, long sec, long usec);
      ^~~~~~~~~~~~~~~~~~
car.c:124:6: error: static declaration of ‘popCar’ follows non-static declaration
 void popCar(user **ppTab){
      ^~~~~~
In file included from car.c:15:0:
car.h:23:6: note: previous declaration of ‘popCar’ was here
 void popCar(user **ppTab);
      ^~~~~~
car.c:132:6: error: static declaration of ‘cleanCar’ follows non-static declaration
 void cleanCar(user **ppTab){
      ^~~~~~~~
In file included from car.c:15:0:
car.h:24:6: note: previous declaration of ‘cleanCar’ was here
 void cleanCar(user **ppTab);
      ^~~~~~~~
car.c:143:6: error: static declaration of ‘dumpCar’ follows non-static declaration
 void dumpCar(void){
      ^~~~~~~
In file included from car.c:15:0:
car.h:25:6: note: previous declaration of ‘dumpCar’ was here
 void dumpCar(void);
      ^~~~~~~
car.c: In function ‘dumpCar’:
car.c:144:11: error: ‘pCarTab’ undeclared (first use in this function); did you mean ‘ppTab’?
  user *pT=pCarTab;
           ^~~~~~~
           ppTab
car.c: In function ‘appendCar’:
car.c:158:6: error: static declaration of ‘logCar’ follows non-static declaration
 void logCar(void){
      ^~~~~~
In file included from car.c:15:0:
car.h:26:6: note: previous declaration of ‘logCar’ was here
 void logCar(void);
      ^~~~~~
car.c: In function ‘logCar’:
car.c:159:11: error: ‘pCarTab’ undeclared (first use in this function); did you mean ‘ppTab’?
  user *pT=pCarTab;
           ^~~~~~~
           ppTab
car.c: In function ‘appendCar’:
car.c:185:6: error: static declaration of ‘analyzeCar’ follows non-static declaration
 void analyzeCar(void){
      ^~~~~~~~~~
In file included from car.c:15:0:
car.h:27:6: note: previous declaration of ‘analyzeCar’ was here
 void analyzeCar(void);
      ^~~~~~~~~~
car.c: In function ‘analyzeCar’:
car.c:186:11: error: ‘pCarTab’ undeclared (first use in this function); did you mean ‘ppTab’?
  user *pT=pCarTab;
           ^~~~~~~
           ppTab
car.c: In function ‘appendCar’:
car.c:283:1: error: expected declaration or statement at end of input
 }
 ^
car.c:283:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
At top level:
car.c:185:6: warning: ‘analyzeCar’ defined but not used [-Wunused-function]
 void analyzeCar(void){
      ^~~~~~~~~~
car.c:158:6: warning: ‘logCar’ defined but not used [-Wunused-function]
 void logCar(void){
      ^~~~~~
car.c:143:6: warning: ‘dumpCar’ defined but not used [-Wunused-function]
 void dumpCar(void){
      ^~~~~~~
car.c:132:6: warning: ‘cleanCar’ defined but not used [-Wunused-function]
 void cleanCar(user **ppTab){
      ^~~~~~~~
car.c:124:6: warning: ‘popCar’ defined but not used [-Wunused-function]
 void popCar(user **ppTab){
      ^~~~~~
car.c:119:6: warning: ‘appendCarTimestamp’ defined but not used [-Wunused-function]
 void appendCarTimestamp(char *pId, long sec, long usec){
      ^~~~~~~~~~~~~~~~~~
car.c:81:5: warning: ‘appendCar’ defined but not used [-Wunused-function]
 int appendCar(user **ppTab, char *pId){
     ^~~~~~~~~
car.c:43:6: warning: ‘popTimestamp’ defined but not used [-Wunused-function]
 void popTimestamp(timestamp **ppTab){
      ^~~~~~~~~~~~
Makefile:5: recipe for target 'etc_monitor' failed
make: *** [etc_monitor] Error 1
